# Mobile-AI-Assistant

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/java/com/example/localchatbot/: ChatApplication.kt  MainActivity.kt  ModelRunner.kt  Screen.kt
app/src/main/java/com/example/localchatbot/data/: ChatHistoryRepository.kt  ChatMessage.kt
app/src/main/java/com/example/localchatbot/inference/: EngineManager.kt  ExecuTorchEngine.kt  GGUFEngine.kt  InferenceEngine.kt  LlamaCpp.kt
app/src/main/java/com/example/localchatbot/overlay/: AssistantChatActivity.kt  FloatingAssistantService.kt  ProcessTextActivity.kt  TextCaptureAccessibilityService.kt
app/src/main/java/com/example/localchatbot/settings/: EngineSettings.kt  InferenceSettings.kt
app/src/main/java/com/example/localchatbot/ui/: ChatScreen.kt  ChatUiState.kt  ChatViewModel.kt  ChatViewModelFactory.kt  SettingsScreen.kt
app/src/main/java/com/example/localchatbot/ui/theme/: Theme.kt
app/src/main/java/com/example/localchatbot/util/: ResourceMonitor.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
